--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@monorepo-template/scripts",
+  "name": "@itsa-project/scripts",
   "version": "0.0.0",
   "dependencies": {
-    "@monorepo-template/core": "*",
+    "@itsa-project/core": "*",
     "sst": "*"
   },
   "scripts": {
