--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -2,6 +2,7 @@
   "name": "@itsa-project/functions",
   "version": "0.0.0",
   "dependencies": {
+    "@aws-sdk/client-sesv2": "^3.645.0",
     "@itsa-project/core": "*",
     "sst": "*"
   },
