--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -5,8 +5,7 @@
     "@aws-sdk/client-cognito-identity-provider": "^3.645.0",
     "@aws-sdk/client-sesv2": "^3.645.0",
     "@itsa-project/core": "*",
-    "sst": "*",
-    "zod": "^3.23.8"
+    "sst": "*"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.137"
