--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "workspaces": [
     "packages/*"
   ],
-  "scripts": {},
+  "scripts": {
+    "db": "sst shell drizzle-kit",
+    "db:studio": "sst shell drizzle-kit studio"
+  },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
     "typescript": "5.3.3"
   },
   "dependencies": {
+    "drizzle-kit": "^0.24.2",
+    "drizzle-orm": "^0.33.0",
     "sst": "^3",
     "zod": "^3.23.8"
   }
