--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.645.0",
+    "@aws-sdk/client-rds-data": "^3.650.0",
     "@aws-sdk/client-sesv2": "^3.645.0",
     "@itsa-project/core": "*",
     "sst": "*"
