--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -6,9 +6,11 @@
     "@aws-sdk/client-rds-data": "^3.650.0",
     "@aws-sdk/client-sesv2": "^3.645.0",
     "@itsa-project/core": "*",
-    "sst": "*"
+    "sst": "*",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.137"
+    "@types/aws-lambda": "^8.10.137",
+    "@types/validator": "^13.12.2"
   }
 }
