--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.645.0",
     "@aws-sdk/client-rds-data": "^3.650.0",
+    "@aws-sdk/client-s3": "^3.658.1",
     "@aws-sdk/client-sesv2": "^3.645.0",
     "@itsa-project/core": "*",
     "sst": "*",
