--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "drizzle-kit": "^0.24.2",
     "drizzle-orm": "^0.33.0",
-    "sst": "^3",
+    "sst": "3.1.46",
     "zod": "^3.23.8"
   }
 }
