--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -8,7 +8,7 @@
     "@aws-sdk/client-sesv2": "^3.645.0",
     "@aws-sdk/s3-request-presigner": "^3.658.1",
     "@itsa-project/core": "*",
-    "sst": "*",
+    "sst": "3.1.46",
     "validator": "^13.12.0"
   },
   "devDependencies": {
