--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.0",
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.645.0",
+    "@aws-sdk/client-dynamodb": "^3.669.0",
     "@aws-sdk/client-rds-data": "^3.650.0",
     "@aws-sdk/client-s3": "^3.658.1",
     "@aws-sdk/client-sesv2": "^3.645.0",
+    "@aws-sdk/lib-dynamodb": "^3.669.0",
     "@aws-sdk/s3-request-presigner": "^3.658.1",
     "@itsa-project/core": "*",
     "sst": "3.1.46",
