--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -2,19 +2,21 @@
   "name": "@itsa-project/functions",
   "version": "0.0.0",
   "dependencies": {
-    "@aws-sdk/client-cognito-identity-provider": "^3.645.0",
+    "@aws-sdk/client-cognito-identity-provider": "^3.669.0",
     "@aws-sdk/client-dynamodb": "^3.669.0",
-    "@aws-sdk/client-rds-data": "^3.650.0",
-    "@aws-sdk/client-s3": "^3.658.1",
-    "@aws-sdk/client-sesv2": "^3.645.0",
+    "@aws-sdk/client-rds-data": "^3.669.0",
+    "@aws-sdk/client-s3": "^3.669.0",
+    "@aws-sdk/client-sesv2": "^3.669.0",
     "@aws-sdk/lib-dynamodb": "^3.669.0",
-    "@aws-sdk/s3-request-presigner": "^3.658.1",
+    "@aws-sdk/s3-request-presigner": "^3.669.0",
     "@itsa-project/core": "*",
-    "sst": "3.1.46",
+    "@types/ssh2-sftp-client": "^9.0.4",
+    "ssh2-sftp-client": "^11.0.0",
+    "sst": "3.1.78",
     "validator": "^13.12.0"
   },
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.137",
+    "@types/aws-lambda": "^8.10.145",
     "@types/validator": "^13.12.2"
   }
 }
