--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,6 +11,7 @@
     ]
   },
   "dependencies": {
+    "@aws-sdk/client-cloudwatch-logs": "^3.670.0",
     "sst": "3.1.78"
   },
   "devDependencies": {
