--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -2,6 +2,7 @@
   "name": "@itsa-project/functions",
   "version": "0.0.0",
   "dependencies": {
+    "@aws-crypto/client-node": "^4.0.1",
     "@aws-sdk/client-cognito-identity-provider": "^3.669.0",
     "@aws-sdk/client-dynamodb": "^3.669.0",
     "@aws-sdk/client-rds-data": "^3.669.0",
@@ -11,6 +12,7 @@
     "@aws-sdk/s3-request-presigner": "^3.669.0",
     "@itsa-project/core": "*",
     "@types/ssh2-sftp-client": "^9.0.4",
+    "base64-js": "^1.5.1",
     "ssh2-sftp-client": "^11.0.0",
     "sst": "3.1.78",
     "validator": "^13.12.0"
