--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -24,8 +24,10 @@
     "aws-amplify": "^5.3.24",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "input-otp": "^1.2.4",
     "lucide-react": "^0.453.0",
     "nanostores": "^0.11.3",
+    "qrcode.react": "^4.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
