--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "@aws-crypto/client-node": "^4.0.1",
+    "@aws-sdk/client-cloudwatch-logs": "^3.670.0",
     "@aws-sdk/client-cognito-identity-provider": "^3.669.0",
     "@aws-sdk/client-dynamodb": "^3.669.0",
     "@aws-sdk/client-rds-data": "^3.669.0",
